# poc-openwrt-dietpi-raspi3b-raspi4b

./: .gitignore  .sops.yaml  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Justfile  Makefile  PLAN.md  README.md  RELEASE.md  TODO-AI.md  TODO.md  pasos_manuales.md
backend/ai-analyzer/db-lib/: Cargo.toml
backend/ai-analyzer/db-lib/src/: chat.rs  error.rs  lib.rs  misc.rs  rules.rs
docs/: arquitectura.md  backend-java-compilacion-despliegue.md  delete-packages-openwrt.md  hardware.md  hitos.md  html-endpoints.md  justfile.md  llm.md  openwrt-custom-build.md  portales.md  scripts.md  setup.md  software-libre.md  troubleshooting.md  vision-general.md
frontend/: .gitignore  actions.html  devices.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
k8s/: ai-analyzer-deployment.yaml  ai-analyzer-ingress.yaml  ai-analyzer-secret.yaml  ai-analyzer-svc.yaml  captive-portal-configmap.yaml  captive-portal-deployment.yaml  captive-portal-ingress.yaml  captive-portal-lentium-configmap.yaml  captive-portal-lentium-deployment.yaml  captive-portal-svc.yaml  captive-portal-update.yaml  captive-portal-v2.yaml  captive-portal.yaml  cleanup-legacy.yaml  dashboard-configmap.yaml  dashboard-deployment.yaml  dashboard-ingress.yaml  dashboard-svc.yaml  dns-spoof-configmap.yaml  dns-spoof-deployment.yaml  dns-spoof-ingress.yaml  dns-spoof-svc.yaml  traefik-helmchartconfig.yaml
nginx/: Dockerfile  nginx.conf
output/: output_status_20260420_223301.md
scripts/: ai-analyzer-java-doctor.sh  cleanup-raspi3b-sensor-for-captive-backend.sh  health-all.sh  llama-compile.sh  (+83 more)
(+140 files in other folders)
